# Notes

./: README.md
_layouts/: default.html
cpp/: index.md
cpp/filesystem/: CMakeLists.txt  main.cpp  readme.md
linux/: index.md
linux/diy_kernel/: readme.md
linux/intel_powermode/: note.md
opencv/: index.md
opencv/image_iterator_cpp/: CMakeLists.txt  main.cpp  readme.md
